--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-<<<<<<< HEAD
-elpa
-*.el#
-=======
 .DS_Store
 .haskell-modules.el
+.places
 elpa
 smex-items
 auto-save-list
 *.elc
->>>>>>> 1309916e783ec126aa3cf836b07d2b9256d65e96
